fixes med litt styling
Jobber med å finne ut hvordan jeg skal gjøre game admin siden. Ikke at det egentlig er så viktig, i og med at det bare er en eller 2 personer som faktisk skal se denne siden. Men jeg vil jo at det skal være brukervennlig og fint å bruke på telefon slik at det lett kan brukes selv om adminene er med i spillet selv.

--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -1,7 +1,7 @@
 .background-image-behind-card {
     background-image: url("./img/background-balance-business-583846.jpg");
     background-size: cover;
-    height: 94.5vh;
+    height: 95vh;
     width: 100vw;
     margin: 0px;
     position: inherit;
