--- a/src/components/Navigation/index.css
+++ b/src/components/Navigation/index.css
@@ -45,13 +45,13 @@ li .link:hover {
 
 .btn-signout {
     background-color: transparent;
-    color: orange;
+    color: orange!important;
     text-decoration: none;
     border: none;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 13px;
-    width: 100%;
-    height: 100%;
+    width: 100px;
+    height: 100%!important;
 
 }
 
